# MyLocalProjects

./: .dockerignore  .eslintrc.cjs  .gitignore  DEPLOY.md  DESIGN_BRIEF.md  Dockerfile  MYS_ITE-BRIEF-SUMMAR  Makefile  Planning NEXUS Overhaul.md  README.md  XXX  docker-compose.prod.yml  nexus-platform.jsx  package-lock.json  package.json  playwright.config.cjs  tsconfig.json  vite.config.js
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  nodejs.yml
2027-online-shop/: .gitignore  404.html  NEXUS-Project-Improvemen-Offer  NEXUS_PLATFORM_BRIEF.md  decoded_rsc.json  docker-compose.yml  home.html  output.html  package-lock.json  package.json  raw_home.html  turbo.json  verify-api.sh
2027-online-shop/apps/api-gateway/: .env.example  cleanup.js  package-lock.json  package.json
2027-online-shop/apps/web/: package.json
2027-online-shop/infra/: init-extensions.sql  prometheus.yml
2027-online-shop/scripts/: send-brief.ts  start-swarm.ts  swarm-daemon.ts
2027-online-shop/src/dropship/: dropship.controller.ts  dropship.module.ts  dropship.service.ts
Bombina/: .gitignore  Modelfile.enhanced  Modelfile.stable  Modelfile.ultimate  README.md  SETUP_COMPLETE.md  requirements.txt
Bombina/bombina-app/: ARCHITECTURE.md  Cargo.toml  README.md  build.sh
Bombina/bombina-app/crates/bombina-core/: Cargo.toml
Bombina/bombina-app/crates/bombina-core/src/: config.rs  lib.rs  ollama.rs  policy.rs  session.rs  types.rs
Bombina/bombina-app/crates/bombina-tools/: Cargo.toml
Bombina/bombina-app/crates/bombina-tools/src/: common.rs  executor.rs  gobuster.rs  lib.rs  nmap.rs
Bombina/bombina-app/crates/bombina-ui/: Cargo.toml
Bombina/bombina-app/crates/bombina-ui/src/: lib.rs  state.rs  theme.rs
Bombina/bombina-app/crates/bombina-ui/src/components/: chat.rs  header.rs  mod.rs  sidebar.rs  status_bar.rs  target_input.rs  tools_panel.rs
Bombina/bombina-app/crates/bombina-ui/src/pages/: home.rs  mod.rs  pentest.rs
Bombina/bombina-app/desktop/: Cargo.toml
Bombina/bombina-app/desktop/src/: main.rs
Bombina/configs/: lora_config.yaml
Bombina/data/: eval.jsonl  train.jsonl
Bombina/data/agent_logs/: execution_20260204_153110.jsonl
Bombina/evaluation/: scenarios.py
Bombina/evaluation/results/: eval_20260204_152029.json  eval_20260204_153039.json
Bombina/notebooks/: bombina_finetune_5k.ipynb  colab_finetune.ipynb
Bombina/reports/: example_report.md
Bombina/scripts/: bombina_agent.py  bombina_chat.py  bombina_unified.py  create_modelfile.py  create_ultimate_modelfile.py  curate_dataset.py  finetune_cpu.py  finetune_v2.py  policy_engine.py  rag_v2.py  report_generator.py
Bombina/scripts/pipeline/: combine_datasets.py  extract_ad.py  extract_cloud.py  extract_methodology.py  extract_owasp.py  generate_advanced.py  generate_attack_composition.py  generate_bulk.py  generate_ctf.py  generate_deep_knowledge.py  generate_expanded.py  generate_expanded_knowledge.py  generate_exploitation_theory.py  generate_final.py  (+13 more)
e2e/: agent.spec.cjs  agent.spec.ts  backup.spec.ts  cart.spec.ts  home.spec.ts  metrics.spec.ts  persistence.spec.ts  seeded.spec.ts
frontend/: index.html
frontend/src/: App.jsx  App.tsx
ops/: README.md  backup-agent.service  backup-agent.timer
public/: app.js  index.html  styles.css
public/assets/: index-BQ-a1rd3.js
scripts/: backup-cart.js  install-backup-cron.sh
src/: index.ts
test/: agent-endpoints.test.mjs  cart-persistence.test.mjs  cart-sqlite.test.mjs  cart-sqljs.test.mjs  health.test.mjs
(+89 files in other folders)
