[package]
name = "bombina-core"
version.workspace = true
edition.workspace = true
description = "Core logic for Bombina pentest AI - Ollama integration and session management"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
